Fix flickering popup

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -26,6 +26,7 @@
 #jpress-main-title {
     background-color: #bcbcbc;
     font-size: 30px;
+    cursor: pointer;
 }
 
 .jpress-post-body {
